--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDDateFuncs.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Shared/_TDDateFuncs.cshtml
@@ -54,8 +54,10 @@
             kendo.culture(cultureGlobal);
 
         var gridDataSource = null;
-//        var gridDataSource = $('#' + report + 'Grid').data('kendoGrid').dataSource;
-//        gridDataSource.read();
+        if ($('#' + report + 'Grid').length > 0) {
+            var gridDataSource = $('#' + report + 'Grid').data('kendoGrid').dataSource;
+            gridDataSource.read();
+        }
         if ($('#' + report + 'Chart').length > 0) {
             var chartDataSource = $('#' + report + 'Chart').data('kendoChart').dataSource;
             if (chartDataSource !== gridDataSource)
