graph other metrics, etc

--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Home/Index.cshtml
@@ -220,5 +220,8 @@
             }
         }
 
+        nMetrics = ['Impressions', 'Clicks', 'Conversions'];
+        eMetrics = ['CPM', 'CPC', 'CPA'];
+        rMetrics = ['CTR', 'ConvRate'];
     </script>
 }
