--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/TD/Views/Reports/Summary.cshtml
@@ -39,6 +39,8 @@
         <td>CTR:</td>
         <td id="tdCTR" style="text-align:right"></td>
     </tr>
+@if (Model.ShouldShowMetric("Conversions"))
+{
     <tr>
         <td>Conversions:</td>
         <td id="tdConversions" style="text-align:right"></td>
@@ -47,7 +49,7 @@
         <td>ConvRate:</td>
         <td id="tdConvRate" style="text-align:right"></td>
     </tr>
-
+}
     <tr>
         <td>Media Spend:</td>
         <td id="tdSpend" style="text-align:right"></td>
@@ -64,18 +66,18 @@
 </div>
 
 @{
-    string secondSelectedValue = (Model.AllMetrics.Length > 1) ? Model.AllMetrics[1] : null;
+    string secondSelectedValue = (Model.AllMetricsSelectItems.Length > 1) ? Model.AllMetricsSelectItems[1].Value : null;
 }
 <div class="four columns">
     <h3>Chart Setup</h3>
     <table>
         <tr>
             <td>First Metric:</td>
-            <td>@Html.DropDownList("selMetric1", new SelectList(Model.AllMetrics), new { style = "width:auto"})</td>
+            <td>@Html.DropDownList("selMetric1", Model.AllMetricsSelectItems, new { style = "width:auto"})</td>
         </tr>
         <tr>
             <td>Second Metric:</td>
-            <td>@Html.DropDownList("selMetric2", new SelectList(Model.AllMetrics, secondSelectedValue), new { style = "width:auto"})</td>
+            <td>@Html.DropDownList("selMetric2", new SelectList(Model.AllMetricsSelectItems, "Value", "Text", secondSelectedValue), new { style = "width:auto"})</td>
         </tr>
         <tr>
             <td colspan="2"><input type="button" value="Redraw Chart" onclick="ChangeChartMetrics()" /></td>
