--- a/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_MainContacts.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Views/Shared/_MainContacts.cshtml
@@ -43,7 +43,8 @@
 <script type="text/x-kendo-tmpl" id="mainContactTemplate">
     <div class="divMainContact">     
         <img style="border: 2px solid ##000;" width="65" src="/Images/avatar.png" /><br /> 
-        #:FirstName# #:LastName#, #:Title#<br />
+        #:FirstName# #:LastName#<br />
+        #:Title#<br />
         <a href="mailto:#:Email#">#:Email#</a><br />
     </div>
 </script>
